apps/backend/seed_error.txt
/Users/mac/comet/node-fullstack-boilerplate/apps/backend/node_modules/ts-node/src/index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: тип Unable to compile TypeScript:
src/seed-notification.ts(11,34): error TS2551: Property 'findOneByEmail' does not exist on type 'UserService'. Did you mean 'findByEmail'?

    at createTSError (/Users/mac/comet/node-fullstack-boilerplate/apps/backend/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/Users/mac/comet/node-fullstack-boilerplate/apps/backend/node_modules/ts-node/src/index.ts:863:19)
    at getOutput (/Users/mac/comet/node-fullstack-boilerplate/apps/backend/node_modules/ts-node/src/index.ts:1077:36)
    at Object.compile (/Users/mac/comet/node-fullstack-boilerplate/apps/backend/node_modules/ts-node/src/index.ts:1433:41)
    at Module.m._compile (/Users/mac/comet/node-fullstack-boilerplate/apps/backend/node_modules/ts-node/src/index.ts:1617:30)
    at node:internal/modules/cjs/loader:1893:10
    at Object.require.extensions.<computed> [as .ts] (/Users/mac/comet/node-fullstack-boilerplate/apps/backend/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1481:32)
    at Module._load (node:internal/modules/cjs/loader:1300:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14) {
  diagnosticCodes: [ 2551 ]
}
